Fix spacing and alignment of cards

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -58,10 +58,15 @@ a {
 
 .card-items {
   display: flex;
+  flex-wrap: wrap;
+  padding: 32px;
+  gap: 24px;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  padding: 20px;
+  flex-basis: 300px;
 }
